[gd_scene load_steps=9 format=3 uid="uid://household_scene_001"]

[ext_resource type="Script" uid="uid://l4x615g7rjbk" path="res://scripts/household_agent.gd" id="1_household"]
[ext_resource type="Script" path="res://scripts/components/wallet.gd" id="2_wallet"]
[ext_resource type="Script" path="res://scripts/components/inventory.gd" id="3_inventory"]
[ext_resource type="Script" path="res://scripts/components/hunger_need.gd" id="4_hunger"]
[ext_resource type="Script" path="res://scripts/components/food_stockpile.gd" id="5_stockpile"]
[ext_resource type="Script" path="res://scripts/components/route_runner.gd" id="6_route"]
[ext_resource type="Script" path="res://scripts/components/inventory_capacity.gd" id="7_capacity"]
[ext_resource type="Script" path="res://scripts/components/food_reserve.gd" id="8_reserve"]

[node name="HouseholdAgent" type="CharacterBody2D"]
script = ExtResource("1_household")

[node name="HouseholdSprite" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -12.0
offset_right = 10.0
offset_bottom = 8.0
color = Color(1, 0.4, 1, 1)

[node name="Wallet" type="Node" parent="."]
script = ExtResource("2_wallet")

[node name="Inventory" type="Node" parent="."]
script = ExtResource("3_inventory")

[node name="HungerNeed" type="Node" parent="."]
script = ExtResource("4_hunger")

[node name="FoodStockpile" type="Node" parent="."]
script = ExtResource("5_stockpile")

[node name="RouteRunner" type="Node" parent="."]
script = ExtResource("6_route")

[node name="InventoryCapacity" type="Node" parent="."]
script = ExtResource("7_capacity")

[node name="FoodReserve" type="Node" parent="."]
script = ExtResource("8_reserve")
